Added Static Form

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					<li class="active"><a href="#img-1">Project</a></li>
 				</ul>
 				<ul class="links">
-					<li class="active"><a href="Russell Banares Resume.pdf">View CV</a></li>
+					<li class="active"><a href="file/Russell Banares Resume.pdf" download>Download CV</a></li>
 				</ul>
 				<ul class="links">
 					<li class="active"><a href="#cont-line">Contact</a></li>
@@ -110,6 +110,15 @@
 									<div class="list__group">
 										<a href="banaresrussell11@gmail.com" class="list-item"><i class="fas fa-envelope-square fa-3x"></i></i></a>
 									</div>
+								</div>
+
+								<div class="contact-form">
+									<form id="contact-form" method="POST" action="contact.html">
+										<input name="name" type="text" class="form-control" placeholder="Your name" required><br/>
+										<input name="email" type="email" class="form-control" placeholder="Your email" requiredtype="text"><br/>
+											<textarea name="message" class="form-control" placeholder="Message" row="4" required></textarea><br/>
+											<input type="submit" class="form-control-submit" value="SEND MESSAGE" />
+									</form>
 								</div>
 						
 						<div id="copyright">
