Added live view in proj 2

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 									<h3><a href="#">PROJECT 3</a></h3>
 									<p>On Process</p>
 									<ul class="actions">
+										<li><a href="https://russellbanares322.github.io/cryptotrackerapp/" class="button style1">LIVE VIEW</a></li>
 										<li><a href="#" class="button style1">SEE CODE</a></li>
 									</ul>
 								</section>
