--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 									<p>A simple layout for future businesses.</p>
 									<small>HTML | CSS</small>
 									<ul class="actions">
+										<li><a href="#">LIVE VIEW<i class="fas fa-arrow-right pl-2"></i></a></li><br /><br />
 										<li><a href="https://github.com/russellbanares322/Russ-Ecommerce-Website" class="button style1">SEE CODE</a></li>
 									</ul>
 								</section>
@@ -85,6 +86,7 @@
 									<p>It helps you track your crypto currency basis.</p>
 									<small>ReactJS</small>
 									<ul class="actions">
+										<li><a href="https://russellbanares322.github.io/cryptotrackerapp/">LIVE VIEW<i class="fas fa-arrow-right pl-2"></i></a></li><br /><br />
 										<li><a href="https://github.com/russellbanares322/cryptotrackerapp" class="button style1">SEE CODE</a></li>
 									</ul>
 								</section>
@@ -95,7 +97,7 @@
 									<h3><a href="#">PROJECT 3</a></h3>
 									<p>On Process</p>
 									<ul class="actions">
-										<li><a href="https://russellbanares322.github.io/cryptotrackerapp/" class="button style1">LIVE VIEW</a></li>
+										<li><a href="#">LIVE VIEW<i class="fas fa-arrow-right pl-2"></i></a></li><br /><br />
 										<li><a href="#" class="button style1">SEE CODE</a></li>
 									</ul>
 								</section>
