--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<!-- Logo -->
 						<div id="logo">
 							<h1>
-								Hi I'am Russell
+								Hi, I'am Russell
 							</h1>
 							<p>A showcase of my projects and my abilites</p>
 						</div>
@@ -50,6 +50,9 @@
 				</ul>
 				<ul class="links">
 					<li class="active"><a href="#cont-line">Contact</a></li>
+				</ul>
+				<ul class="links">
+					<li class="active"><a href="#abt-me">About</a></li>
 				</ul>
 			
 				
@@ -106,8 +109,17 @@
 					</div>
 				</section>
 
+			<!-- About Me -->
+			<section id="highlights" class="wrapper style4">
+				<div class="title" id="abt-me">About Me</div>
+				<div class="container">
+							<h1>About me</h1>
+						</div>
+					</section>
+
+
 			<!-- Contact Title -->
-				<section id="footer" class="wrapper">
+				<section id="footer" class="wrapper style3">
 					<div class="title" id="cont-line">GET IN TOUCH</div>
 					<div class="container">
 									<div class="list__group">
