Added email and github css

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 									<p>It helps you track your crypto currency basis.</p>
 									<small>ReactJS</small>
 									<ul class="actions">
-										<li><a href="https://russellbanares322.github.io/cryptotrackerapp/">LIVE VIEW<i class="fas fa-arrow-right pl-2"></i></a></li><br /><br />
+										<li><a href="https://russellbanares322.github.io/cryptotrackerapp/" class="l_view">LIVE VIEW<i class="fas fa-arrow-right pl-2"></i></a></li><br /><br />
 										<li><a href="https://github.com/russellbanares322/cryptotrackerapp" class="button style1">SEE CODE</a></li>
 									</ul>
 								</section>
@@ -113,7 +113,9 @@
 			<section id="highlights" class="wrapper style4">
 				<div class="title" id="abt-me">About Me</div>
 				<div class="container">
-							<h1>About me</h1>
+							<div class="about__p">Passionate junior front-end web developer,
+								has experience in HTML, CSS, and bit of ReactJS and Laravel.
+							</div>
 						</div>
 					</section>
 
@@ -122,13 +124,26 @@
 				<section id="footer" class="wrapper style3">
 					<div class="title" id="cont-line">GET IN TOUCH</div>
 					<div class="container">
-									<div class="list__group">
-										<a href="https://github.com/russellbanares322" class="list-item"><i class="fab fa-github fa-3x"></i></a>
-										
-									</div>
-									<div class="list__group">
-										<a href="banaresrussell11@gmail.com" class="list-item"><i class="fas fa-envelope-square fa-3x"></i></i></a>
-									</div>
+						<ul class="contact__me">
+							<li class="cont__list">
+							  <a href="https://github.com/russellbanares322" class="cont__link">
+								<span></span>
+								<span></span>
+								<span></span>
+								<span></span>
+								<span><i class="fab fa-github-square fa-2x github"></i></span>
+							  </a>
+							</li>
+							<li class="cont__list">
+							  <a href="mailto:banaresrussell11@gmail.com" class="cont__link">
+								<span></span>
+								<span></span>
+								<span></span>
+								<span></span>
+								<span><i class="fas fa-envelope-square fa-2x email"></i></span>
+							  </a>
+							</li>
+						  </ul>
 								</div>
 
 								<div class="contact-form">
