--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 									<p>It helps you track your crypto currency basis.</p>
 									<small>ReactJS</small>
 									<ul class="actions">
-										<li><a href="https://russellbanares322.github.io/cryptotrackerapp/" class="l_view">LIVE VIEW<i class="fas fa-arrow-right pl-2"></i></a></li><br /><br />
+										<li><a href="https://russellbanares322.github.io/cryptotrackerapp" class="l_view">LIVE VIEW<i class="fas fa-arrow-right pl-2"></i></a></li><br /><br />
 										<li><a href="https://github.com/russellbanares322/cryptotrackerapp" class="button style1">SEE CODE</a></li>
 									</ul>
 								</section>
