--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					<li class="active"><a href="#img-1">Project</a></li>
 				</ul>
 				<ul class="links">
-					<li class="active"><a href="file/Russell Banares Resume.pdf" download>Download CV</a></li>
+					<li class="active"><a href="file/FRussell Banares Resume.pdf" download>Download CV</a></li>
 				</ul>
 				<ul class="links">
 					<li class="active"><a href="#cont-line">Contact</a></li>
