--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 							  </a>
 							</li>
 							<li class="cont__list">
-							  <a href="mailto:banaresrussell11@gmail.com" class="cont__link">
+							  <a href="mailto:banaresrussell11@gmail.com" target="_blank" rel="noreferrernoopener" class="cont__link">
 								<span></span>
 								<span></span>
 								<span></span>
