--- a/contact.html
+++ b/contact.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <title>Under Renovation</title>
-    <div class="content">
-      <h1>Still on progress.....</h1>
+    <title>My Portfolio</title>
+    </head>
+    <body  class="content">
+      <div>
+        <h1>Still on progress.....</h1>
     </div>
-  </head>
-  <body></body>
-</html>
+  </body>
+    </html>
