--- a/index.html
+++ b/index.html
@@ -165,11 +165,11 @@
 								</div>
 
 								<div class="contact-form">
-									<form id="contact-form" method="POST" action="contact.html">
+									<form id="contact-form" method="POST" action="https://formspree.io/f/mdobwbkb">
 										<input name="name" type="text" class="form-control" placeholder="Your name" required><br/>
 										<input name="email" type="email" class="form-control" placeholder="Your email" requiredtype="text"><br/>
 											<textarea name="message" class="form-control" placeholder="Message" row="4" required></textarea><br/>
-											<input type="submit" class="form-control-submit" value="SEND MESSAGE" />
+											<a href="#"><input type="submit" class="form-control-submit" value="SEND MESSAGE" /></a>
 									</form>
 								</div>
 						
