added feedback text

--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
 										<input name="name" type="text" class="form-control" placeholder="Your name" required><br/>
 										<input name="email" type="email" class="form-control" placeholder="Your email" requiredtype="text"><br/>
 											<textarea name="message" class="form-control" placeholder="Message" row="4" required></textarea><br/>
+											<h6 class="feedback">I appreciate your feedback.</h6>
 											<a href="#"><input type="submit" class="form-control-submit" value="SEND MESSAGE" /></a>
 									</form>
 								</div>
