--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="icon" type="image/png" href="images/logo2.png" />
+		<link rel="icon" type="image/png" href="images/logo1.png" class="logo_icon"/>
 		<!-- Scripts -->
 		<script defer src="assets/js/jquery.min.js"></script>
 		<script defer src="assets/js/jquery.dropotron.min.js"></script>
