updated project description

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 							<h3>PROJECT 2</h3>
 							<h1>Crypto Currency Tracker</h1>
 							<p>Where you can search and track the prices of crypto currency.</p>
-							<small>React</small>
+							<small>ReactJS</small>
 							<ul class="actions">
 								<li><a href="https://russellbanares322.github.io/cryptotrackerapp" class="l_view">LIVE
 										VIEW<i class="fas fa-link link"></i></a></li><br /><br />
