added some margins in title

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<!-- Logo -->
 			<div id="logo">
 				<h1 class="h_title">
-					Hi, I'am <span class="title_input"></span>
+					Hi, I'am <br /> <br /><span class="title_input"></span>
 				</h1>
 				<p class="p_title">A showcase of my projects and my abilites</p>
 			</div>
@@ -176,7 +176,7 @@
 			<div class="container">
 				<ul class="contact__me">
 					<li class="cont__list">
-						<a href="https://github.com/russellbanares322" class="cont__link">
+						<a href="https://github.com/russellbanares322" target="_blank" class="cont__link">
 							<span></span>
 							<span></span>
 							<span></span>
